--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
                           <li class="nav-item me-3">
                             <a class="nav-link" aria-current="page" href="#rodape">Fale Conosco</a>
                           </li>
-                          <a href="https://pay.kiwify.com.br/VcyQZh9">
+                          <a href="https://pay.kiwify.com.br/j7jvhiF">
                             <button type="button" class="btn btnOne">Fazer matrícula</button>
                           </a>
                           <a href="https://dashboard.kiwify.com.br/course/premium/ebfa8b14-edd3-46f6-869b-fcebc9ae9340">
@@ -118,8 +118,8 @@
                         </div>
                         <h1 class="mt-2">Aprenda Front-end de forma prática e conquiste as melhores vagas</h1>
                         <p>Saia do amadorismo e torne-se um desenvolvedor front-end profissional.</p>
-                        <a href="https://pay.kiwify.com.br/VcyQZh9"><button type="button" class="btn btn-primary">Fazer minha matrícula</button></a>
-                        <h6 class="mt-4"><span>🚀 Matricule-se por apenas R$49,90 mês</span> </h6>
+                        <a href="https://pay.kiwify.com.br/j7jvhiF"><button type="button" class="btn btn-primary">Fazer minha matrícula</button></a>
+                        <h6 class="mt-4"><span>🚀 Matricule-se por apenas R$39,90 mês</span> </h6>
                       </div>
                     </div>
                     <div class="col-lg-6 col-md-12 col-sm-12" data-aos="fade-right" data-aos-duration="1000">
@@ -199,7 +199,7 @@
                     <p>Ao completar todo o treinameto receba<br>
                       seu certificado com validade de horas<br>
                       complementares.</p>
-                      <a href="https://pay.kiwify.com.br/VcyQZh9"><button type="button" class="btn btn-primary">Quero meu certificado</button></a>
+                      <a href="https://pay.kiwify.com.br/j7jvhiF"><button type="button" class="btn btn-primary">Quero meu certificado</button></a>
                   </div>
               </div>
             </div>
@@ -513,8 +513,8 @@
                       forma prática, com um passo a passo criado <br>
                       para te guiar do zero até sua vaga de dev.</p>
                     <p class="preco"><s>De R$ 79,90 por:</s></p>
-                    <h4 class="mb-3">R$ 49,90<span> /mês</span></h4>
-                    <a href="https://pay.kiwify.com.br/VcyQZh9"><button type="button" class="btn btn-primary">Fazer minha matrícula</button></a>
+                    <h4 class="mb-3">R$ 39,90<span> /mês</span></h4>
+                    <a href="https://pay.kiwify.com.br/j7jvhiF"><button type="button" class="btn btn-primary">Fazer minha matrícula</button></a>
                     <img src="img/Icons/css.svg" alt="logo css" class="css" data-aos="fade-in" data-aos-duration="1000">
                     <img src="img/Icons/js.svg" alt="logo js" class="js" data-aos="fade-in" data-aos-duration="1000">
                   </div>
