--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
                             <a class="nav-link" aria-current="page" href="#plano">Plano</a>
                           </li>
                           <li class="nav-item me-3">
-                            <a class="nav-link" aria-current="page" href="#duvidas">Dúvidas</a>
+                            <a class="nav-link" aria-current="page" href="https://blog.devboost.com.br/">Blog</a>
                           </li>
                           <li class="nav-item me-3">
                             <a class="nav-link" aria-current="page" href="#rodape">Fale Conosco</a>
